# ThreatLocker-MCP

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  spec.json
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-05-22-initial-release-tool-additions-design.md
scripts/: generate_from_spec.py  probe_authorize_for_permit.py  probe_permit_application.py
src/threatlocker_mcp/: __init__.py  client.py  config.py  models.py  server.py
src/threatlocker_mcp/tools/: __init__.py  action_log.py  application.py  approval_request.py  computer.py  computer_group.py  maintenance_mode.py  online_devices.py  organization.py  policy.py  report.py  system_audit.py  tag.py
tests/: test_client.py
