[project]
name = "threatlocker-mcp"
version = "0.2.1"
description = "MCP server for the ThreatLocker Portal API"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
license-files = []
authors = [
    { name = "Kierston Grantham", email = "Space-C0wboy@users.noreply.github.com" },
]
keywords = ["mcp", "threatlocker", "security", "endpoint-protection", "ai-tools", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "fastmcp>=2.0.0,<3.0",
    "httpx>=0.27.0,<1.0",
    "pydantic>=2.6.0,<3.0",
    "python-dotenv>=1.0.0,<2.0",
]

[project.urls]
Homepage = "https://github.com/Space-C0wboy/ThreatLocker-MCP"
Repository = "https://github.com/Space-C0wboy/ThreatLocker-MCP"
Issues = "https://github.com/Space-C0wboy/ThreatLocker-MCP/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0,<9.0",
    "pytest-asyncio>=0.23.0,<2.0",
    "pytest-httpx>=0.30.0,<1.0",
    "ruff>=0.4.0,<1.0",
]

[project.scripts]
threatlocker-mcp = "threatlocker_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/threatlocker_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "W"]
ignore = [
    "E501",   # line-too-long — enforced by formatter, not linter
    "B008",   # do-not-perform-function-call-in-default-argument (FastMCP pattern)
]

[tool.ruff.lint.isort]
known-first-party = ["threatlocker_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
